import { test, expect, describe } from "vitest";
import { readFileSync } from "node:fs";
import { fileURLToPath } from "node:url";
import { dirname, join } from "node:path";
import n from "nunjucks";
import { formatCost, queryPreview, buildViewModel } from "./github.ts";
import { isQueryLong, renderExplain, type ReportContext } from "../reporter.ts";
import type { CiRunMetadata, RunComparison } from "../site-api.ts";

const __filename = fileURLToPath(import.meta.url);
const __dirname = dirname(__filename);
const successTemplate = readFileSync(join(__dirname, "success.md.j2"), "utf-8");

n.configure({ autoescape: false, trimBlocks: true, lstripBlocks: true });

function renderTemplate(ctx: ReportContext) {
  const viewModel = buildViewModel(ctx);
  return n.renderString(successTemplate, {
    ...ctx,
    ...viewModel,
    isQueryLong,
    renderExplain,
    formatCost,
  });
}

describe("formatCost", () => {
  test("formats small numbers without commas", () => {
    expect(formatCost(9)).toBe("9");
    expect(formatCost(126)).toBe("126");
    expect(formatCost(999)).toBe("999");
  });

  test("formats thousands with commas", () => {
    expect(formatCost(1000)).toBe("1,000");
    expect(formatCost(15922)).toBe("15,922");
    expect(formatCost(1638.53)).toBe("1,639");
  });

  test("formats large numbers", () => {
    expect(formatCost(1000000)).toBe("1,000,000");
    expect(formatCost(29544.03)).toBe("29,544");
  });

  test("rounds decimals", () => {
    expect(formatCost(8.33)).toBe("8");
    expect(formatCost(292.09)).toBe("292");
  });
});

describe("queryPreview", () => {
  test("returns short query as-is", () => {
    expect(queryPreview('SELECT "id" FROM "users"')).toBe(
      'SELECT "id" FROM "users"',
    );
  });

  test("inlines all lines of multiline query", () => {
    const query = `SELECT
  "id",
  "name"
FROM
  "users"
WHERE
  "users"."id" = $1`;
    expect(queryPreview(query)).toBe(
      'SELECT "id", "name" FROM "users" WHERE "users"."id" = $1',
    );
  });

  test("truncates at 200 chars", () => {
    const longQuery =
      'SELECT "id", "user_id", "widget_id", "lesson_id", "module_id", "type", "data", "completed", "state", "extra_column_one", "extra_column_two", "extra_column_three", "extra_column_four", "extra_column_five" FROM "user_widgets" WHERE "user_id" = $1';
    const result = queryPreview(longQuery);
    expect(result.length).toBeLessThanOrEqual(200);
    expect(result).toMatch(/\.\.\.$/);
  });

  test("skips empty lines", () => {
    const query = `

SELECT "id"
FROM "users"

`;
    expect(queryPreview(query)).toBe('SELECT "id" FROM "users"');
  });
});

function makeRecommendation(overrides: {
  fingerprint?: string;
  formattedQuery?: string;
  baseCost?: number;
  optimizedCost?: number;
}) {
  return {
    fingerprint: overrides.fingerprint ?? "abc123",
    formattedQuery: overrides.formattedQuery ?? 'SELECT "id" FROM "users"',
    baseCost: overrides.baseCost ?? 1000,
    baseExplainPlan: {},
    optimizedCost: overrides.optimizedCost ?? 100,
    existingIndexes: [],
    proposedIndexes: ['users("id")'],
    explainPlan: {},
  };
}

function makeContext(overrides: Partial<ReportContext> = {}): ReportContext {
  return {
    statisticsMode: { kind: "fromAssumption", reltuples: 10000 },
    recommendations: [],
    queriesPastThreshold: [],
    queryStats: { analyzed: 28, matched: 10, optimized: 2, errored: 0 },
    statistics: [],
    metadata: { logSize: 1000, timeElapsed: 5000 },
    ...overrides,
  };
}

function makeComparison(overrides: Partial<RunComparison> = {}): RunComparison {
  return {
    previousRunId: "prev-run-1",
    previousBranch: "main",
    previousCommitSha: "abc123",
    regressed: [],
    acknowledgedRegressed: [],
    improved: [],
    newQueries: [],
    disappearedHashes: [],
    ...overrides,
  };
}

describe("buildViewModel", () => {
  test("no comparison: shows all recommendations, no comparison data", () => {
    const ctx = makeContext({
      recommendations: [makeRecommendation({})],
    });
    const vm = buildViewModel(ctx);
    expect(vm.hasComparison).toBe(false);
    expect(vm.displayRecommendations).toHaveLength(1);
    expect(vm.displayRecommendations[0].queryPreview).toBe(
      'SELECT "id" FROM "users"',
    );
    expect(vm.displayRegressed).toHaveLength(0);
    expect(vm.displayImproved).toHaveLength(0);
  });

  test("comparison with no changes: empty sections", () => {
    const ctx = makeContext({
      comparison: makeComparison(),
      recommendations: [
        makeRecommendation({ fingerprint: "existing-query" }),
      ],
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayRecommendations).toHaveLength(0);
    expect(vm.displayRegressed).toHaveLength(0);
    expect(vm.displayImproved).toHaveLength(0);
    expect(vm.preExistingRecommendations).toHaveLength(1);
  });

  test("new queries with recommendations", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        newQueries: [
          {
            hash: "new-query-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            nudges: [], tags: [], tableReferences: [],
            optimization: { state: "no_improvement_found", cost: 10, indexesUsed: [] },
          },
        ],
      }),
      recommendations: [
        makeRecommendation({ fingerprint: "new-query-1" }),
        makeRecommendation({ fingerprint: "existing-query" }),
      ],
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayRecommendations).toHaveLength(1);
    expect(vm.displayRecommendations[0].fingerprint).toBe("new-query-1");
    expect(vm.newQueryCount).toBe(1);
  });

  test("regressions surface in displayRegressed", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        regressed: [
          {
            hash: "regressed-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            previousCost: 100,
            currentCost: 500,
            regressionPercentage: 400,
          },
        ],
      }),
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayRegressed).toHaveLength(1);
    expect(vm.displayRegressed[0].queryPreview).toBe("SELECT 1");
    expect(vm.displayRecommendations).toHaveLength(0);
  });

  test("improvements surface in displayImproved with indexesChanged true", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        improved: [
          {
            hash: "improved-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            previousCost: 500,
            currentCost: 100,
            improvementPercentage: 80,
            previousIndexes: ["users_pkey"],
            currentIndexes: ["users_pkey", "users_email_idx"],
          },
        ],
      }),
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayImproved).toHaveLength(1);
    expect(vm.displayImproved[0].queryPreview).toBe("SELECT 1");
    expect(vm.displayImproved[0].indexesChanged).toBe(true);
  });

  test("improvements with identical indexes have indexesChanged false", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        improved: [
          {
            hash: "improved-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            previousCost: 500,
            currentCost: 100,
            improvementPercentage: 80,
            previousIndexes: ["users_pkey"],
            currentIndexes: ["users_pkey"],
          },
        ],
      }),
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayImproved).toHaveLength(1);
    expect(vm.displayImproved[0].indexesChanged).toBe(false);
  });

  test("filters recommendations to only new queries", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        newQueries: [
          {
            hash: "new-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            nudges: [], tags: [], tableReferences: [],
            optimization: { state: "no_improvement_found", cost: 10, indexesUsed: [] },
          },
          {
            hash: "new-2",
            query: "SELECT 2",
            formattedQuery: "SELECT 2",
            nudges: [], tags: [], tableReferences: [],
            optimization: { state: "no_improvement_found", cost: 10, indexesUsed: [] },
          },
        ],
      }),
      recommendations: [
        makeRecommendation({ fingerprint: "new-1" }),
        makeRecommendation({ fingerprint: "existing-1" }),
        makeRecommendation({ fingerprint: "existing-2" }),
        makeRecommendation({ fingerprint: "new-2" }),
      ],
    });
    const vm = buildViewModel(ctx);
    expect(vm.displayRecommendations).toHaveLength(2);
    expect(vm.displayRecommendations.map((r) => r.fingerprint)).toEqual([
      "new-1",
      "new-2",
    ]);
  });

  test("preExistingRecommendations contains non-new-query recommendations", () => {
    const ctx = makeContext({
      comparison: makeComparison({
        newQueries: [
          {
            hash: "new-1",
            query: "SELECT 1",
            formattedQuery: "SELECT 1",
            nudges: [], tags: [], tableReferences: [],
            optimization: { state: "no_improvement_found", cost: 10, indexesUsed: [] },
          },
        ],
      }),
      recommendations: [
        makeRecommendation({ fingerprint: "new-1" }),
        makeRecommendation({ fingerprint: "existing-1", formattedQuery: 'SELECT "name" FROM "products"' }),
        makeRecommendation({ fingerprint: "existing-2", formattedQuery: 'UPDATE "orders" SET "status" = $1' }),
      ],
    });
    const vm = buildViewModel(ctx);
    expect(vm.preExistingRecommendations).toHaveLength(2);
    expect(vm.preExistingRecommendations.map((r) => r.fingerprint)).toEqual([
      "existing-1",
      "existing-2",
    ]);
  });

  test("no comparison: preExistingRecommendations is empty", () => {
    const ctx = makeContext({
      recommendations: [makeRecommendation({})],
    });
    const vm = buildViewModel(ctx);
    expect(vm.preExistingRecommendations).toHaveLength(0);
  });

});

describe("template rendering", () => {
  test("renders queryStats.analyzed as the query count", () => {
    const ctx = makeContext({
      queryStats: { analyzed: 5, matched: 3, optimized: 1, errored: 0 },
      comparison: makeComparison(),
    });
    const output = renderTemplate(ctx);
    expect(output).toContain("5 queries analyzed");
  });

  test("renders queryStats.analyzed in no-comparison mode", () => {
    const ctx = makeContext({
      queryStats: { analyzed: 3, matched: 1, optimized: 0, errored: 0 },
    });
    const output = renderTemplate(ctx);
    expect(output).toContain("3 queries analyzed");
  });
});

function makeMetadata(overrides: Partial<CiRunMetadata> = {}): CiRunMetadata {
  return {
    rollup: { regressed: 2, improved: 1, new: 3, removed: 0 },
    rollupText: "2 regressed · 1 improved · 3 new · 0 removed",
    footer: 'More detail → get_ci_run({ runId: "9f3a1c20" })',
    docsUrl: "https://docs.querydoctor.com",
    signalKeys: {
      new: "signal.new",
      regressed: "signal.regressed",
      improved: "signal.improved",
      index: "signal.index",
    },
    queries: [
      { hash: "regressed-1", link: "https://app.querydoctor.com/alice/proj/ci/9f3a1c20/regressed-1" },
      { hash: "improved-1", link: "https://app.querydoctor.com/alice/proj/ci/9f3a1c20/improved-1" },
    ],
    ...overrides,
  };
}

describe("CI-signal metadata parity (analyzer#141)", () => {
  const regressedComparison = makeComparison({
    regressed: [
      {
        hash: "regressed-1",
        query: "SELECT 1",
        formattedQuery: "SELECT 1",
        previousCost: 120,
        currentCost: 170,
        regressionPercentage: 42,
      },
    ],
    improved: [
      {
        hash: "improved-1",
        query: "SELECT 2",
        formattedQuery: "SELECT 2",
        previousCost: 500,
        currentCost: 100,
        improvementPercentage: 80,
        previousIndexes: [],
        currentIndexes: [],
      },
    ],
  });

  test("linked repo: renders rollup line, per-query links, footer, run link, and docs link", () => {
    const ctx = makeContext({
      comparison: regressedComparison,
      runUrl: "https://app.querydoctor.com/alice/proj/ci/9f3a1c20",
      runMetadata: makeMetadata(),
    });
    const output = renderTemplate(ctx);

    // Roll-up line rendered verbatim (single source of truth — no re-derived grammar).
    expect(output).toContain("2 regressed · 1 improved · 3 new · 0 removed");
    // Footer rendered verbatim.
    expect(output).toContain('More detail → get_ci_run({ runId: "9f3a1c20" })');
    // Per-query rows link via metadata.queries, not a re-derived /ixr/ route.
    expect(output).toContain("https://app.querydoctor.com/alice/proj/ci/9f3a1c20/regressed-1");
    expect(output).toContain("https://app.querydoctor.com/alice/proj/ci/9f3a1c20/improved-1");
    expect(output).not.toContain("/ixr/");
    // Run link and small docs link in the meta row.
    expect(output).toContain('<a href="https://app.querydoctor.com/alice/proj/ci/9f3a1c20">view run</a>');
    expect(output).toContain('<a href="https://docs.querydoctor.com">docs</a>');
    // Per-signal icons aren't rendered yet (assets pending Site follow-up).
    expect(output).not.toContain("<img");

    expect(output).toMatchSnapshot();
  });

  test("unlinked repo: rollup + footer + docs only, no run link, no per-query links", () => {
    const ctx = makeContext({
      comparison: regressedComparison,
      runUrl: undefined,
      runMetadata: makeMetadata({ queries: [] }),
    });
    const output = renderTemplate(ctx);

    // Shared elements still present.
    expect(output).toContain("2 regressed · 1 improved · 3 new · 0 removed");
    expect(output).toContain('More detail → get_ci_run({ runId: "9f3a1c20" })');
    expect(output).toContain('<a href="https://docs.querydoctor.com">docs</a>');
    // No run link, no per-query links when the repo isn't linked.
    expect(output).not.toContain("view run");
    expect(output).not.toContain("https://app.querydoctor.com/alice/proj/ci");
    // Query previews still render, just without anchors.
    expect(output).toContain("<code>SELECT 1</code>");

    expect(output).toMatchSnapshot();
  });

  test("no metadata (degraded API response): no rollup or footer row", () => {
    const ctx = makeContext({
      comparison: regressedComparison,
      runMetadata: undefined,
    });
    const output = renderTemplate(ctx);

    expect(output).not.toContain("regressed · ");
    expect(output).not.toContain("get_ci_run");
    expect(output).not.toContain("docs</a>");
  });

  test("null docsUrl: docs link omitted, footer still rendered", () => {
    const ctx = makeContext({
      comparison: regressedComparison,
      runUrl: "https://app.querydoctor.com/alice/proj/ci/9f3a1c20",
      runMetadata: makeMetadata({ docsUrl: null }),
    });
    const output = renderTemplate(ctx);

    expect(output).toContain('More detail → get_ci_run({ runId: "9f3a1c20" })');
    expect(output).not.toContain(">docs</a>");
  });

  test("degraded baseline (null rollup): roll-up line omitted, footer still rendered", () => {
    // The Site API nulls rollup/rollupText when the comparison baseline read
    // fails, but the baseline-independent footer/docs still ship. Omit the
    // roll-up line entirely rather than render a blank line or "null".
    const ctx = makeContext({
      comparison: regressedComparison,
      runUrl: "https://app.querydoctor.com/alice/proj/ci/9f3a1c20",
      runMetadata: makeMetadata({ rollup: null, rollupText: null }),
    });
    const output = renderTemplate(ctx);

    expect(output).not.toContain("regressed · ");
    expect(output).not.toContain("null");
    // Footer and run link are baseline-independent — they still render.
    expect(output).toContain('More detail → get_ci_run({ runId: "9f3a1c20" })');
    expect(output).toContain(
      '<a href="https://app.querydoctor.com/alice/proj/ci/9f3a1c20">view run</a>',
    );
  });
});
